# shakehand

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
shakehand/: Cargo.toml  README.md
shakehand-test/: Cargo.toml
shakehand-test/locale/: global.toml  test_fallback.toml
shakehand-test/locale/sub/: sub.toml
shakehand-test/src/: lib.rs
shakehand/src/: analyzer.rs  lib.rs  shakehand.rs
shakehand/test-locale/: global.toml
