[workspace]
members = ["shakehand", "shakehand-test"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/catilgrass/shakehand"
homepage = "https://github.com/catilgrass/shakehand"

[workspace.dependencies]
shakehand = { path = "shakehand" }
syn = "2.0.117"
quote = "1.0.45"
proc-macro2 = "1.0.106"
just_fmt = "0.1.2"
toml = "0.8"
