[package]
name = "shakehand_test"
version = "0.1.0"
edition = "2024"

[dependencies]
shakehand.workspace = true

[package.metadata.shakehand]
# Fallback chain: when the specified language does not exist, how to fall back the language
fallback.other = "en"
fallback.zh_HK = "zh_CN"            # Hong Kong Traditional -> Simplified Chinese
fallback.zh_TW = "zh_CN"            # Taiwan Traditional -> Simplified Chinese
fallback.zh_CN = "en"               # Simplified Chinese -> English
fallback.vi = "zh_CN"               # Vietnamese -> Simplified Chinese
fallback.ms = "id"                  # Malay -> Indonesian
fallback.it = "fr"                  # Italian -> French
fallback.pt = "es"                  # Portuguese -> Spanish
fallback.sv = "no"                  # Swedish -> Norwegian
fallback.no = "da"                  # Norwegian -> Danish
fallback.da = "sv"                  # Danish -> Swedish
fallback.tr = "ar"                  # Turkish -> Arabic
