[package]
name = "shakehand"
version.workspace = true
edition.workspace = true
description = "A rust i18n lib - Let different languages shake hands with each other!"
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
keywords = ["internationalization", "i18n", "localization", "translation", "compile-time"]
categories = ["internationalization", "localization"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
just_fmt = { workspace = true }
toml = { workspace = true }
